# VerTIGo

./: .clang-format  .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug-report---pellet-dispenser.md  pellet-dispenser-bug-report.md
.github/workflows/: sphinx-gh-pages.yml
configuration/: ansible.cfg  inventory  requirements.txt  requirements.yml  site.yml
configuration/group_vars/all/: vault
configuration/roles/psychopy-server/: .gitattributes  PyQt6-6.7.0-cp38-abi3-manylinux_2_28_aarch64.whl  mutf8-1.0.6-cp310-cp310-linux_aarch64.whl  pillow-10.3.0-cp310-cp310-manylinux_2_28_aarch64.whl  psychtoolbox-3.0.19.0-cp310-cp310-linux_aarch64.whl
devices/: .gitignore
devices/BMS-adapter/: BMS-adapter.kicad_pcb  BMS-adapter.kicad_pro  BMS-adapter.kicad_sch  BMS-adapter.step  sym-lib-table
devices/BMS/ecad/: bms.kicad_pro  bms.kicad_sch  charger.kicad_sch  gauge.kicad_sch
devices/OpenUPS/: CellSelfDischargeMeasurement.ipynb
devices/PowerJack-adapter/: PowerJack-adapter.kicad_pcb  PowerJack-adapter.kicad_pro  PowerJack-adapter.kicad_sch  PowerJack-adapter.step  fp-lib-table
devices/battery-holder/ecad/: #auto_saved_files#  battery-holder.kicad_pcb  battery-holder.kicad_pro  battery-holder.kicad_sch  fp-lib-table  ~battery-holder.kicad_sch.lck
devices/camera/: .gitignore  README.md  pyproject.toml
devices/camera/src/inkawuvp_vertigo_camera/: __init__.py  __main__.py  camera_stream.py
devices/camera/tests/: test_camera_stream.py
devices/common/ecad/: common.bak  common.kicad_sym
devices/ir-sensor/: BoM.csv
devices/ir-sensor/ecad/: ir-sensor.kicad_pcb  ir-sensor.kicad_pro  ir-sensor.kicad_sch  panel.kicad_pcb  panel.kicad_pro
devices/pellet-dispenser/: BoM.csv
devices/pellet-dispenser/driver/: .gitignore  README.md  example.py  pyproject.toml  test.py
devices/pellet-dispenser/driver/inkawuvp_pellet_dispenser/: __init__.py  module.py
devices/pellet-dispenser/driver/unil_pellet_dispenser/: __init__.py  module.py
devices/pellet-dispenser/ecad/: #auto_saved_files#  .gitignore  RP2040.kicad_sch  fp-lib-table  light_barrier.kicad_sch  pellet_dispenser.kicad_pcb  pellet_dispenser.kicad_pro  pellet_dispenser.kicad_sch  sym-lib-table  ~pellet_dispenser.kicad_sch.lck
devices/pellet-dispenser/firmware/: CMakeLists.txt  pico_sdk_import.cmake
devices/pellet-dispenser/firmware/cmake/: OpenOCD.cmake
devices/pellet-dispenser/firmware/src/: Button.cpp  Button.hpp  CMakeLists.txt  Config.hpp  Controller.cpp  Controller.hpp  DRV8848.cpp  DRV8848.hpp  DispenserController.cpp  DispenserController.hpp  Display.cpp  Display.hpp  Error.cpp  Error.hpp  ErrorReporter.cpp  ErrorReporter.hpp  FlashStorage.cpp  FlashStorage.hpp  IRQManager.cpp  IRQManager.hpp  IRSensor.cpp  IRSensor.hpp  LEDMorse.cpp  LEDMorse.hpp  Log.cpp  Log.hpp  PIOIRSensor.hpp  PelletCounter.cpp  PelletCounter.hpp  PelletDispenser.cpp  PelletDispenser.hpp  WheelController.cpp  WheelController.hpp  ir_sensor.pio  irsensor.pio  main.c  main.cpp  timestamp.cmake
devices/pellet-dispenser/firmware/src/hardware/: #Processor.cpp#  DRV8848.cpp  DRV8848.hpp  FlashStorage.hpp  IRQManager.cpp  IRQManager.hpp  IRSensor.cpp  IRSensor.hpp  PIOIRSensor.cpp  PIOIRSensor.hpp
devices/pellet-dispenser/firmware/src/usb/: callbacks.cpp  callbacks.h  protocol.hpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
devices/pellet-dispenser/firmware/src/utils/: Defer.hpp  Processor.cpp  Processor.hpp  Publisher.cpp  Publisher.hpp  Queue.cpp  Queue.hpp
devices/pi-HAT-IO/: BoM.csv
devices/pi-HAT-IO/ecad/: pi-HAT-IO.kicad_pcb  pi-HAT-IO.kicad_pro  pi-HAT-IO.kicad_sch  pi-HAT-IO.step
devices/powerboard/ecad/: powerboard.kicad_pcb  powerboard.kicad_pro  powerboard.kicad_sch
diagram/: .wysitikz.tmpl  general.tikz
documentation/: Makefile  requirements.txt
documentation/source/: conf.py  index.rst
documentation/source/guides/: index.rst  replace_battery.rst  replace_dispenser_wheel.rst
documentation/source/hwguides/: replace_dispenser_wheel.rst
documentation/source/sfguides/: accessing_vertigo_file.rst  connecting_to_vertigo.rst  index.rst
misc/: .gitignore
misc/JST-jigs/: JST-jigs.kicad_pcb  JST-jigs.kicad_prl  JST-jigs.kicad_pro  JST-jigs.kicad_sch
psychopy-ivp/: README.md  pyproject.toml
psychopy-ivp/examples/: .gitignore  random_reward.psyexp  simple.psyexp
psychopy-session-webserver/: README.md  pyproject.toml  test.py
psychopy-session-webserver/misc/: psychopy-session-webserver.service  psychopy-session-webserver.sh
psychopy-session-webserver/samples/: .gitignore  blue.psyexp  green.psyexp
psychopy-session-webserver/src/psychopy_session_webserver/: __init__.py  __main__.py  async_task_runner.py  dependency_checker.py  file_event_handler.py  main.py  options.py  participants_registry.py  participants_updater.py  server.py  session.py  types.py  update_broadcaster.py  utils.py
psychopy-session-webserver/tests/: __init__.py  logutils.py  mock_session.py  test_async_task_runner.py  test_color_conversion.py  test_dependency_checker.py  test_duration.py  test_file_event_handler.py  test_participant_registry.py  test_scripts_arguments.py  test_session.py  test_update_broadcaster.py
psychopy-unil/: pyproject.toml
psychopy-unil/psychopy-unil/: __init__.py
psychopy-zaci/: README.md  pyproject.toml
psychopy-zaci/examples/: .gitignore  random_reward.psyexp  simple.psyexp  simple.py  simple_lastrun.py  touch_reward.psyexp
psychopy-zaci/psychopy-zaci/: __init__.py  component.py  device.py
psychopy-zaci/psychopy_zaci/components/pellet_dispenser/: __init__.py
psychopy-zaci/psychopy_zaci/devices/: pellet_dispenser.py
rpi-camera-service/: .gitignore  mediamtx.yml  pyproject.toml  rpi_camera_service.py
rpi-camera-service/src/rpi_camera_service/: __init__.py  __main__.py  camera_stream.py
webui/: .dockerignore  .env  .gitignore  .prettierrc  Dockerfile  docker-compose.yml  package-lock.json  package.json  routes.yml  tailwind.config.ts  vite.config.ts  whep_player.svelte
webui/src/: app.html  hooks.server.js  hooks.server.ts
webui/src/lib/: application_state.ts  (+19 more)
webui/tests/: test.ts
(+122 files in other folders)
