[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-unil"
version = "0.0.1a1"
description = "Extension to add support for University of Lausanne's devices such as a pellet dispenser for Vervet Monkey's."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Alexandre Tuleu", email = "alexandre.tuleu.2005@polytechnique.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "unil-pellet-dispenser",
]

[project.urls]

Homepage = "https://github.com/atuleu/zaci/tree/main/psychopy-unil"
Repository = "https://github.com/atuleu/zaci"


[tool.setuptools.packages.find]
where = ["",]

[tool.setuptools.package-data]
"*" = ["*.png",]

[project.entry-points."psychopy.experiment.components"]
PelletDispenserComponent = "psychopy_unil:PelletDispenserComponent"
