[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inkawuvp-vertigo-camera"
version = "0.0.1a1"
authors = [
  { name="Alexandre Tuleu", email="alexandre.tuleu.2005@polytechnique.org" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
   "fastapi[standard]",
   "pygobject",
]

[project.optional-dependencies]
dev = [
    "black>=22.10",
    "pytest",
    "PyGObject-stubs"
]


[tool.black]
line-length = 88
target-version = ['py38', 'py310', 'py311']
preview = true
unstable = true

[tool.pyright]
