[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inkawuvp-pellet-dispenser"
version = "0.0.2a1"
authors = [
    { name = "Alexandre Tuleu", email = "alexandre.tuleu.2005@polytechnique.org"},
]
description = "A Python package to contol IVP's pellet dispenser via USB"
readme = "README.md"
license = { text = "GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.8"
keywords = [ "pellet", "dispenser", "hardware", "hid", "Open Source Hardware" ]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hid",
]

[project.urls]
Homepage = "https://github.com/iNkawuVervetProject/VerTIGo/tree/main/devices/pellet-dispenser/driver"
Issues = 'https://github.com/iNkawuVervetProject/VerTIGo/issues?q=is%3Aissue+is%3Aopen+label%3A"pellet dispenser"'
Repository = "https://github.com/iNkawuVervetProject/VerTIGo"
